fixed #trending-body grid on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,4 @@
 ------------------------------------------------------*/
 body { min-width: 320px; }
 
-#main-panel1,
-#main-panel2,
-#main-panel3 { }
-
 #main { background: #EAEAEA; }
